# speaker-design

./: .gitignore  Cargo.toml  README.md  index.html  style.css
.github/workflows/: trunk-pages.yml
src/: cabinet.rs  dimensions.rs  main.rs  views.rs
